// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add condition to Next.js built-in oneOf rule that adds JS & CSS support 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "oneOf": Array [
          Object {
            "oneOf": Array [
              Object {
                "test": /\\\\\\.\\(tsx\\|ts\\|js\\|cjs\\|mjs\\|jsx\\)\\$/,
              },
              Object {
                "test": /\\\\\\.module\\\\\\.css\\$/,
              },
            ],
            "test": /\\\\\\.\\(tsx\\|ts\\|js\\|cjs\\|mjs\\|jsx\\|css\\|scss\\|sass\\)\\$/,
          },
        ],
      },
    ],
  },
}
`;

exports[`should add noop SVG rule at the root if a SVG rule was detected 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "test": /\\\\\\.svg\\$/,
      },
      Object {
        "oneOf": Array [
          Object {
            "loader": "foo",
            "test": /\\\\\\.svg\\$/,
          },
        ],
      },
    ],
  },
}
`;

exports[`should not wrap rule JS rules that should be fallthrough 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "resolve": Object {
          "fullySpecified": false,
        },
        "test": /\\\\\\.m\\?js/,
      },
      Object {
        "issuerLayer": "api",
        "test": /\\\\\\.\\(js\\|cjs\\|mjs\\)\\$/,
      },
      Object {
        "oneOf": Array [
          Object {
            "oneOf": Array [
              Object {
                "test": /\\\\\\.\\(tsx\\|ts\\|js\\|cjs\\|mjs\\|jsx\\)\\$/,
              },
              Object {
                "test": /\\\\\\.module\\\\\\.css\\$/,
              },
            ],
            "test": /\\\\\\.\\(tsx\\|ts\\|js\\|cjs\\|mjs\\|jsx\\|css\\|scss\\|sass\\)\\$/,
          },
        ],
      },
    ],
  },
}
`;

exports[`should return in .oneOf rules sent in .rules 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "oneOf": Array [
          Object {
            "test": /\\\\\\.js\\$/,
          },
        ],
      },
    ],
  },
}
`;
